--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
     <title>ISIT 420 - Assignment Two</title>
   </head>
   <body>
-    <h1>Assignment Two</h1>
+    <h1>Assignment Two</h1></br>
+    <button type="button" id="create">Create</button>
+    <input type="text" id="createStoreID" ><br><br>
+    <input type="text" id="createSalesPersonID" ><br><br>
+    <input type="text" id="createCdID" ><br><br>
+    <input type="text" id="createPricePaid" ><br><br>
+
+    <button type="button" id="submit">Submit one</button>
+    <input type="text" id="submitStoreID" ><br><br>
+    <input type="text" id="submitSalesPersonID" ><br><br>
+    <input type="text" id="submitCdID" ><br><br>
+    <input type="text" id="submitPricePaid" ><br><br>
+
+    <button type="button" id="submit500">Submit 500</button>
   </body>
 </html>
