--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
+    />
     <script src="javascripts/index.js" async></script>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>ISIT 420 - Assignment Two</title>
   </head>
   <body>
-    <h1>Assignment Two</h1></br>
-    <button type="button" id="create">Create</button>
-    <input type="text" id="createStoreID" ><br><br>
-    <input type="text" id="createSalesPersonID" ><br><br>
-    <input type="text" id="createCdID" ><br><br>
-    <input type="text" id="createPricePaid" ><br><br>
-
-    <button type="button" id="submit">Submit one</button>
-    <input type="text" id="submitStoreID" ><br><br>
-    <input type="text" id="submitSalesPersonID" ><br><br>
-    <input type="text" id="submitCdID" ><br><br>
-    <input type="text" id="submitPricePaid" ><br><br>
-
-    <button type="button" id="submit500">Submit 500</button>
+    <div class="container">
+      <div class="row">
+        <div class="column">
+          <h1>Assignment Two - Create 500</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <form id="orderForm">
+            <fieldset>
+              <label for="StoreID">Store ID</label>
+              <input type="text" id="StoreID" name="StoreID" />
+              <label for="SalesPersonID">Sales Person ID</label>
+              <input type="text" id="SalesPersonID" name="SalesPersonID" />
+              <label for="CdID">Cd ID</label>
+              <input type="text" id="CdID" name="CdID" />
+              <label for="PricePaid">Price Paid</label>
+              <input type="text" id="PricePaid" name="PricePaid" />
+            </fieldset>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <button type="submit" form="orderForm">Create</button>
+        </div>
+        <div class="column">
+          <button type="button" id="createOne">Create One</button>
+          <div id="createOneStatus"></div>
+        </div>
+        <div class="column">
+          <button type="button" id="createFiveHundred">Create 500</button>
+          <div id="createFiveHundredStatus"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
